syntax = "proto3";
package message;
option go_package = "./";

message dl_Column {
    repeated int32 Row = 1;
}

message dl_AwardData {
    optional int32 Symbol = 1;
    optional int32 Count = 2;
    optional int32 Index = 3;
    optional double Win = 4;
}

message dl_SinglePlate {
    repeated dl_Column Symbol = 1;
    optional double SingleWin = 2;
    repeated dl_AwardData AwardDataVec = 3;
    optional bool IsBonus = 4;
    optional double BonusWin = 5;
    optional int32 GetFreeRound = 6;
    optional int32 AwardTypeFlag = 7;
    repeated double JPWin = 8;
    repeated dl_AwardData BonusDataVec = 9;
    optional int32 FreeNowRound = 10;
    optional int32 FreeTotalRound = 11;
    optional bool MaxFlag = 12;
}

message dl_FreeData {
    repeated dl_SinglePlate FreeQueue = 1;
    optional double FreeTotalWin = 2;
}

message dl_SpinAck {
    repeated dl_SinglePlate MainGame = 1;
    repeated dl_FreeData FreeGame = 2;
    optional double TotalWin = 3;
    optional string ShowIndex = 4;
    optional double NowMoney = 5;
    optional int32 AckType = 6;
    optional double RTP = 7;
    optional int32 LID = 8;
    optional int32 RID = 9;
}

message dl_PigInfo {
    optional int32 Left = 1;
    optional int32 Right = 2;
}

